--- a/src/kovacevic/view/Izbornik.form
+++ b/src/kovacevic/view/Izbornik.form
@@ -51,7 +51,7 @@
                   </Group>
                   <Component id="btnUnosRadMaterijal" alignment="0" max="32767" attributes="0"/>
                   <Component id="btnUnosAnalizaCijene" alignment="0" max="32767" attributes="0"/>
-                  <Component id="btnUnosAnalizaCijene1" alignment="0" max="32767" attributes="0"/>
+                  <Component id="btnTroskovnici" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -86,7 +86,7 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btnUnosAnalizaCijene" min="-2" pref="40" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="btnUnosAnalizaCijene1" min="-2" pref="40" max="-2" attributes="0"/>
+              <Component id="btnTroskovnici" min="-2" pref="40" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -208,13 +208,13 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUnosAnalizaCijeneActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="btnUnosAnalizaCijene1">
+    <Component class="javax.swing.JButton" name="btnTroskovnici">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Tro&#x161;kovnik"/>
+        <Property name="text" type="java.lang.String" value="Tro&#x161;kovnici"/>
         <Property name="horizontalTextPosition" type="int" value="0"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUnosAnalizaCijene1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTroskovniciActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
