--- a/src/kovacevic/view/FormaAnalizaCijene.form
+++ b/src/kovacevic/view/FormaAnalizaCijene.form
@@ -910,7 +910,8 @@
             <Component class="javax.swing.JTable" name="jTableNorma">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="5" rowCount="0">
+                  <Table columnCount="6" rowCount="0">
+                    <Column editable="false" title="null" type="java.lang.Object"/>
                     <Column editable="false" title="null" type="java.lang.Object"/>
                     <Column editable="false" title="null" type="java.lang.Object"/>
                     <Column editable="false" title="null" type="java.lang.Object"/>
@@ -921,6 +922,11 @@
                 <Property name="autoResizeMode" type="int" value="0"/>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                       <Title/>
                       <Editor/>
