--- a/src/kovacevic/view/TestIzbornik.form
+++ b/src/kovacevic/view/TestIzbornik.form
@@ -33,7 +33,6 @@
                   <Component id="btnUnosRadMaterijal" alignment="0" min="-2" pref="134" max="-2" attributes="0"/>
                   <Component id="btnUnosAnalizaCijene" alignment="0" min="-2" pref="134" max="-2" attributes="0"/>
                   <Component id="btnTroskovnici" alignment="0" min="-2" pref="134" max="-2" attributes="0"/>
-                  <Component id="jButton1" alignment="0" min="-2" pref="134" max="-2" attributes="0"/>
                   <Component id="lblGithub" alignment="1" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" max="-2" attributes="0"/>
@@ -58,8 +57,7 @@
                       <Component id="btnUnosAnalizaCijene" min="-2" pref="40" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="btnTroskovnici" min="-2" pref="40" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="jButton1" min="-2" pref="40" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
@@ -110,14 +108,6 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTroskovniciActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
       </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
